@startuml
left to right direction
skinparam linetype ortho

entity "customers" as customers {
  * id_customer : int
  --
  nama : varchar
  email : varchar
  no_hp : varchar
  qr_member : varchar
}

entity "categories" as categories {
  * id_category : int
  --
  nama_category : varchar
}

entity "products" as products {
  * id_product : int
  --
  id_category : int
  nama_product : varchar
  harga : decimal
  stok : int
  gambar : varchar
}

entity "orders" as orders {
  * id_order : int
  --
  id_customer : int
  id_voucher : int
  kode_order : varchar
  tipe_pesanan : varchar
  subtotal : decimal
  diskon : decimal
  total : decimal
  status_order : varchar
}

entity "order_items" as order_items {
  * id_order_item : int
  --
  id_order : int
  id_product : int
  jumlah : int
  harga : decimal
  subtotal : decimal
}

entity "payments" as payments {
  * id_payment : int
  --
  id_order : int
  metode_pembayaran : varchar
  status_pembayaran : varchar
  total_bayar : decimal
  paid_at : datetime
}

entity "vouchers" as vouchers {
  * id_voucher : int
  --
  kode_voucher : varchar
  nama_voucher : varchar
  nominal_diskon : decimal
  status : varchar
}

entity "member_points" as points {
  * id_point : int
  --
  id_customer : int
  jumlah_poin : int
  keterangan : text
}

entity "admins" as admins {
  * id_admin : int
  --
  nama_admin : varchar
  email : varchar
  password : varchar
}

customers ||--o{ orders : melakukan
orders ||--o{ order_items : memiliki
products ||--o{ order_items : dipilih
categories ||--o{ products : memiliki
orders ||--|| payments : dibayar
vouchers ||--o{ orders : digunakan
customers ||--o{ points : memiliki
admins ||--o{ products : mengelola
admins ||--o{ categories : mengelola
admins ||--o{ orders : memonitor

@enduml